# Momentos

./: .gitignore  README.md  vcpkg.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.js  page.js  page.module.css
frontend/app/about/: page.jsx
frontend/app/addmoment/: addmoment.module.css  middleware.js  page.jsx
frontend/app/createaccount/: createaccount.jsx  createaccount.module.css  page.jsx
frontend/app/dashboard/: dashboard.module.css  page.jsx
frontend/app/editprofile/: editprofile.module.css  page.jsx
frontend/app/login/: login.module.css  page.jsx
frontend/app/show/[momentid]/: page.jsx  show.module.css
frontend/app/update/[momentid]/: page.jsx  update.module.css
frontend/components/: Footer.jsx  Footer.module.css  Navbar.jsx  Navbar.module.css  Slideshow.jsx  Slideshow.module.css
restapi/: CMakeLists.txt  mkm_db.sql
restapi/src/: User.h  db_utils.cpp  main.cpp
